@@ -151,7 +151,7 @@ def gentest(name:str, test_cmd:str|list|dict, labels:list&features&tags=None, cm
             data:list|dict=None, visibility:list=None, timeout:int=0, needs_transitive_deps:bool=False,
             flaky:bool|int=0, secrets:list|dict=None, no_test_output:bool=False, test_outputs:list=None,
             output_is_complete:bool=True, requires:list=None, sandbox:bool=None, size:str=None, local:bool=False,
-            pass_env:list=None, env:dict=None, exit_on_error:bool=CONFIG.EXIT_ON_ERROR):
+            pass_env:list=None, env:dict=None, exit_on_error:bool=CONFIG.EXIT_ON_ERROR, no_test_coverage:bool=False):
     """A rule which creates a test with an arbitrary command.
 
     The command must return zero on success and nonzero on failure. Test results are written
@@ -184,6 +184,10 @@ def gentest(name:str, test_cmd:str|list|dict, labels:list&features&tags=None, cm
       flaky (bool | int): If true the test will be marked as flaky and automatically retried.
       no_test_output (bool): If true the test is not expected to write any output results, it will
                              pass if the command exits with 0 and fail otherwise.
+      no_test_coverage (bool): If true, the test is not expected to produce any coverage output under
+                               `plz cover`. By default this is false, but coverage is optional, so
+                               Please will not fail if no coverage file is output; this is mostly relevant
+                               for remote execution where not producing an expected output will inhibit caching.
       test_outputs (list): List of optional additional test outputs.
       output_is_complete (bool): If this is true then the rule blocks downwards searches of transitive
                           dependencies by other rules.
@@ -223,6 +227,7 @@ def gentest(name:str, test_cmd:str|list|dict, labels:list&features&tags=None, cm
         requires = requires,
         test_sandbox = sandbox,
         no_test_output = no_test_output,
+        no_test_coverage = no_test_coverage,
         test_outputs = test_outputs,
         flaky = flaky,
         local = local,
